Cleanup gamepack parameter code